fix: add text overflow handling for round links in UI

--- a/src/app/components/rounds/rounds.scss
+++ b/src/app/components/rounds/rounds.scss
@@ -19,10 +19,18 @@
 
       color: var(--gray-990);
       text-decoration: none;
+      flex-shrink: 0;
 
       &:hover {
         text-decoration: underline;
       }
+    }
+
+    .text-shrink {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      flex-shrink: 1;
     }
   }
 }
